# hermeskill

./: .env.example  .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
config/: capabilities.yaml  capability-enforcement-policy.yaml  capability-inventory.yaml  capability-risk-policy.yaml  profile-capabilities.yaml  tool-capability-map.yaml
demo/: run_dod.py
demo/coding_agent/: agent.py
deploy/: dev-db-bootstrap.ps1  setup.sh  stasis-control-plane.service
docs/architecture/: hermes-permission-architecture-v1.md  l3-execution-architecture.md
docs/authorizations/: l3-supervisor-implementation-authorization.md
docs/decisions/: capability-approval-policy.md  capability-permission-model.md  control-plane-execution-awareness.md  execution-manager-runtime-boundary.md  execution-runtime-integration-contract.md  execution-telemetry-schema.md  l3-process-supervisor-adoption.md  runtime-shadow-mode-policy.md
docs/designs/: l3-supervisor-runtime-integration.md
docs/maintenance/: hermes-safe-doctor.md  hermes-safe-status.md  hermes-update-maintenance.md
docs/operations/: hermes-production-integration.md
docs/reports/: execution-layer-integration-review.md  l3-execution-architecture-status.md  l3-supervisor-validation.md
docs/reviews/: l3-supervisor-rfc-review.md
scripts/: check-hermes-update-compatibility.sh  check-production-integration.sh  daily-health-check.sh  hermes-safe-doctor.sh  hermes-safe-status.sh  recover-hermeskill-integration.sh  show-production-baseline.sh  verify_m1_1.py  write-update-history.sh
(+3 files in other folders)
