[project]
name = "stasis-workspace"
version = "0.0.0"
description = "Stasis MVP — agent supervision via apoptosis protocol"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
stasis-agent = { workspace = true }
stasis-control-plane = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.112",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/versions/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PTH", "RUF"]
ignore = ["E501", "B008", "RUF002"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["langchain_core.*", "langgraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--import-mode=importlib"
testpaths = ["packages/stasis-sdk/tests", "packages/stasis-control-plane/tests"]
